# FIT

./: .gitignore  README.md
aag/: FA.cpp  sample.cpp
adw/: adw1.cmd  adw2.cmd  adw3.cmd
ag1/hw2/: hw2.cpp
ag1/hw3/: sample.cpp
aps/hw1/: Dolansky_Lukas_CPU.v  Dolansky_Lukas_prog1.asm  testbench.v
aps/hw2/: Dolansky_Lukas_main.c
aps/labs/: 21multi32.v  21multi32_tb.v  41multi32.v  41multi32_tb.v  adder_32.v  adder_32_tb.v  alu.v  alu_tb.v  comparator_32.v  comparator_32_tb.v  control_unit.v  control_unit_tb.v  expander16_to_32.v  expander16_to_32_tb.v  multiplier4_32.v  multiplier4_32_tb.v  reg.v  reg_tb.v  register32.v  register32_tb.v  resettable_register32.v  resettable_register32_tb.v  test
bek/clock/: NC.c  README.txt  SH.py  capabilities.c
bek/fakebook/: BEK_6_Postup.txt  DB_cookies.csv  DB_cookies.json  DB_credentials.php  index.html  index.php
bek/hw3/: chyby.txt
ham/: README.md
ham/du01/: notebook.ipynb
ham/du03/: Postup.md  sha256-blacklist  suricata.rules  suricata.yaml
ham/du04/: Postup.md
ham/du04/kernel-monitor/: .gitignore  CMakeLists.txt  README.md  Vagrantfile
ham/du04/kernel-monitor/cmake/: FindKernelHeaders.cmake
ham/du04/kernel-monitor/monlib/: CMakeLists.txt
ham/du04/kernel-monitor/monlib/include/: monlib.h  monlib_os.h
ham/du04/kernel-monitor/monlib/src/: monlib.c
ham/du04/kernel-monitor/monloop/: CMakeLists.txt  Kbuild.in
ham/du04/kernel-monitor/monloop/src/: monlib_kernel_hashtable.c  monlib_kernel_hashtable.h  monlib_kernel_os.c  monlib_kernel_os.h  monlib_kernel_stat.c  monlib_kernel_stat.h  monloop-module.c
ham/du04/kernel-monitor/scripts/: build.sh  monloopMirrorIntf.sh  monloopReplayPcap.sh  monloopRmMirrorIntf.sh  monloopins.sh  monlooprm.sh  provision.sh  tests.sh
ham/du04/kernel-monitor/tests/: CMakeLists.txt
ham/du04/kernel-monitor/tests/src/: basic_test.cpp  shared.cpp  shared.hpp  test_hashtable.cpp  test_hashtable.h
hw1/: hw1_final.cpp
hw2/: hw2.cpp
hwb/: README.md
hwb/lab04-06_AES_PC/: Makefile  TBOX.h  aestest4_tmpl.cpp  aestest5_Tbox.cpp  aestest5_speed.cpp  aestest6_int.cpp  aestest6_int_on_the_fly.cpp  compare.sh  comparison_table.txt
hwb/lab08_DPA/: dpa_student_v3_completed.ipynb
hwb/lab09_PUF/: SRAM.ipynb
hwb/lab10_TRNG/: attack_student.py  measurement.py  oscilloscope.py
kab/: bonus4.py  sample.cpp
kab/bonus3/: README.org  collision.py  insecure_hash.py  test.py
kab/hw2/: nonreadable.TGA  nonwritable.TGA  solution.cpp
kab/hw3/: sample.cpp
osy/: Makefile  output  sample_tester.cpp  solution.cpp  solution_GPTS.cpp  test
osy/examples/: condvar_01  condvar_pt_01.c  prodcons_cv_01
osy/hw2/: test.cpp
pa2/programs/: cv1.cpp  cv11.cpp  cv12.cpp  cv1a.cpp  cv2.cpp  cv3.cpp  cv4.cpp  cv6.cpp  cv7.cpp  cv9.cpp  cv9b.cpp  hw7.cpp  list.cpp  pokus.cpp  vector.cpp  vector.hpp
pa2/semestral_project/: Doxyfile  Makefile  dolanluk  prohlaseni.txt  zadani.txt
php/hw04/: autoloader.php
php/hw05/: composer.json  run.php
php/hw06/: run.php
php/hw10/: README.md
ps2/awk/: apache-log  download-counter  power  students
ps2/bash/: append  max_item  parse_conf  prepend
ps2/intro/: archive  courses  log
ps2/perl/: boom.pl  count.pl  cut_1.pl  cut_2.pl  eq.pl  hello.pl  match.pl  progscan.pl  ps2.pod
ps2/sed/: cnb  cnb_wrapper  courses-map  personas  shrink  template
psi/: server.cpp
ukb/: HW_4__OWASP_JS.docx  HW_5_Sledování.docx
ukb/Modeling/: Default+ADFS.tb7  HW1.tm7  (+4 more)
(+174 files in other folders)
